--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul>
                     <li>
                         <a id="narita-guide-button" class="action-button">
-                            <strong>11:00 成田機場->淺草</strong>
+                            <strong>成田機場->淺草</strong>
                         </a>
                     </li>
                     <li>米久本店</li>
@@ -46,12 +46,8 @@
                     <li>proto 器とタカラモノ</li>
                     <li>Tool Shop Nobori</li>                    
                     <li>八十八良葉舍 淺草</li>
-                    <li>淺草鰻魚鐵(國際通分店)</li>
-                    <li>秋葉原 animate</li>
-                    <li>?Kissa Hangetsu</li>
-                    <li>?KONCENT</li>
-                    <li>?Hakujitsu</li>
-                </ul>
+                    <li>淺草鰻魚鐵(國際通分店)</li>                                        
+                </ul>                
             </div>
         </section>
 
@@ -65,11 +61,13 @@
                 <h2>🗓️ 12/28 新宿、澀谷、東京鐵塔</h2>             
                 <h3>📍 行程</h3>
                 <ul>                    
-                    <li>澀谷 Shibuya Sky</li>                    
-                    <li>惠比壽</li>
-                    <li>明治神宮</li>
+                    <li>CAMELBACK sandwich&espresso</li>                                       
+                    <li>THE NORTH FACE 3</li>
+                    <li>極味屋 澀谷PARCO店</li> 
+                    <li>Kenyan Shibuya</li>
+                    <li>LUMINE EST</li>
                     <li>18:00 Ushigoro Ginza</li>
-                    <li>東京鐵塔</li>
+                    <li>Marunouchi Naka-Dori Ave</li>
                 </ul>
             </div>
         </section>
@@ -83,7 +81,9 @@
                 </div>
                 <h2>🗓️ 12/29 disney-Sea </h2>                
                 <h3>🚆 交通：</h3>
-                <p>淺草 (人形町站) → 日比谷線 (八丁堀站) → JR京葉線 → 舞濱站</p>
+                <p>12/29 最早班車 5:03</p>
+                <p>淺草 → (都營淺草線快特) 人形町 → (東京Metro地鐵日比谷線) 八丁堀東京都 → (JR京葉線) 舞濱</p>
+                            
             </div>
         </section>
        
@@ -101,7 +101,12 @@
                 <p>2.三軒茶屋 → 宮の坂 線路：東急世田谷線 Setagaya Line（小電車）</p>
                 <p>3.宮の坂站 → 豪德寺</p>
                 <h4>📍 行程</h4>
-                <p>可以再回澀谷逛逛</p>
+                <ul>                    
+                    <li>豪德寺</li>                    
+                    <li>11:30 麻布笄軒 中目黒店</li>
+                    <li>Shibuya Sky</li>
+                    <li>東京鐵塔</li>
+                </ul>
             </div>
         </section>
 
@@ -119,6 +124,13 @@
                     東京都台東区西浅草3-27-4</p>
                 <p>時間:12/31 08:00-1/1 20:00</p>
                 <p>自駕到hotel clad約 1.5 - 2 小時</p>
+                <h4>📍 行程</h4>
+                <ul>                    
+                    <li>金山テラス</li>                    
+                    <li>朝霧高原 道之站</li>
+                    <li>富士吉田懷舊商店街</li>
+                    <li>新倉山淺間公園</li>
+                </ul>
                 <button class="nav-button" data-location="Hotel Clad">導航到 Hotel Clad </button>
             </div>
         </section>
@@ -133,9 +145,14 @@
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
                 <p><strong>住宿:</strong> Hotel Apreton</p>                        
                 <h3>📍 行程</h3>
-                <ul><li>忍野八海</li>
-                    <li>新倉山淺間公園</li>
-                    <li>吉田本町商店街</li>
+                <ul><li>河口湖lawson</li>
+                    <li>河口湖</li>
+                    <li>忍野八海</li>
+                    <li>平野之濱</li>
+                    <li>江之島</li>
+                    <li>鐮倉高校前</li>
+                    <li>小町通り</li>
+                    <li>鎌倉武士堂</li>
                 </ul>
                 <button class="nav-button" data-location="Hotel Apreton">導航到 Hotel Apreton</button>
             </div>
@@ -579,6 +596,7 @@
     </script>
 </body>
 </html>
+
 
 
 
