--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="weather-info">
                     12/28 新宿・澀谷 | 天氣：載入中... 
                 </div>
-                <h2>🗓️ 12/28 新宿、澀谷、東京鐵塔</h2>             
+                <h2>🗓️ 12/28 新宿、澀谷</h2>             
                 <h3>📍 行程</h3>
                 <ul>                    
                     <li>CAMELBACK sandwich&espresso</li>                                       
@@ -136,13 +136,13 @@
         </section>
 
         <section id="day-1-1" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
+            <div class="day-card current-vibe-card" style="background-image: url('image/kamakura.jpg');">
                 <p>🗻 富士山</p></div>
             <div class="day-card detail-card" data-date="1/1" data-city="Fujikawaguchiko">
                 <div class="weather-info">
                     1/1 富士山-河口湖 | 天氣：載入中...
                 </div>
-                <h2>🗓️ 1/1 富士山 → 上野 </h2>
+                <h2>🗓️ 1/1 富士山 → 鎌倉 → 上野 </h2>
                 <p><strong>住宿:</strong> Hotel Apreton</p>                        
                 <h3>📍 行程</h3>
                 <ul><li>河口湖lawson</li>
@@ -160,19 +160,22 @@
 
         <section id="day-1-2" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/kamakura.jpg');">
-                <p>🌊 鎌倉</p></div>
-            <div class="day-card detail-card" data-date="1/2" data-city="Kamakura">
+                <p>🏢 太陽城、原宿</p></div>
+            <div class="day-card detail-card" data-date="1/2" data-city="Shibuya">
                 <div class="weather-info">
-                    1/2 鎌倉市 | 天氣：載入中...
+                    1/2 太陽城、原宿 | 天氣：載入中...
                 </div>
-                <h2>🗓️ 1/2 鎌倉</h2>
+                <h2>🗓️ 1/2 太陽城、原宿</h2>
                 <h3>🚆 交通</h3>
                 <p>上野站 →（JR 上野東京 Line）→ 鎌倉站</p>                
                 <h4>📍 行程</h3>
                 <ul>
-                    <li>江之島</li>
-                    <li>灌籃高手平交道</li>
-                    <li>小町通</li>                    
+                    <li>妙義神社</li>
+                    <li>Monja Kurya Restaurant</li>
+                    <li>太陽城</li>
+                    <li>Takeshita Shopping Street</li>                    
+                    <li>豬排丼屋 瑞兆</li>
+                    <li>DOLCE TACUBO CAFFE</li>
                 </ul>
             </div>
         </section>
@@ -596,6 +599,7 @@
     </script>
 </body>
 </html>
+
 
 
 
